# bge-gemma-multimodal

./: README.md  add_special_token.py  bge_multimodal.ipynb  full_test.py  init_model_bones.py  model_forward_test.py  prompt_format.md  prompt_format_test.py  pyproject.toml
bge_gemma2_multimodal/: __init__.py  configuration_bgeGemma2_multimodal.py  modeling_bgeGemma2_multimodal.py  processing_bgeGemma2_multimodal.py
bge_gemma2_multimodal_hub_files/: added_tokens.json  config.json  preprocessor_config.json  processor_config.json  special_tokens_map.json  tokenizer_config.json
